name:               lens-constraints
version:            0.0.1
license:            BSD3
license-file:       LICENSE
author:             Edward A. Kmett, Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>
maintainer:         Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>
copyright:          Copyright (C) 2016 Edward A. Kmett, Tony Morris
synopsis:           Lens constraints
category:           Control
description:        
  Lens contraints
homepage:           https://github.com/ekmett/lens-constraints
bug-reports:        https://github.com/ekmett/lens-constraints/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:ekmett/lens-constraints.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                      base          >= 3   && < 5
                    , lens          >= 4.0 && < 5
                    , constraints   >= 0.8 && < 1
                    , semigroupoids >= 4.2 && < 6
                    
  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Control.Lens.Constraints

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                      base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
